[package]
name = "nprint-rs"
version = "0.1.0"
edition = "2021"
description = "Rust adaptation of Nprint "
readme = "README.md"
repository = "https://github.com/JohannHugon/nprint-rs"
license = "MIT"
license-file = "LICENSE"
keywords = ["network parsing", "nprint","machine learning",]

[lib]
bench = false

[dependencies]
pnet = "0.35.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
