[package]
name = "nprint-rs"
version = "0.1.1"
edition = "2021"
authors = ["Johann Hugon <nprint-rs@johannhugon.com>","David Julien"]
description = "Rust adaptation of Nprint"
readme = "README.md"
repository = "https://github.com/JohannHugon/nprint-rs"
license = "MIT"
keywords = ["network","parsing", "nprint","machinelearning",]

[lib]
bench = false

[dependencies]
pnet = "0.35.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
